<!-- Global Entities to reference --><!DOCTYPE resources [<!ENTITY appname "REFRESH MY MEMORY">]>


<resources>
    <!-- GENERAL PURPOSE STRINGS -->
    <string name="app_name">&appname;</string>


    <!-- URL STRINGS -->
    <string name="servlet_url">http://localhost:8080/RefreshMyMemoryServlet/RefreshMyMemoryServlet</string>
    <string name="emulator_servlet_url">http://10.0.2.2:8080/RefreshMyMemoryServlet/RefreshMyMemoryServlet</string>


    <!-- TITLE SCREEN STRINGS -->
    <string name="welcome_title">WELCOME TO \n&appname;</string>
    <string name="create_account_title">CREATE NEW ACCOUNT</string>
    <string name="login_title">LOG IN</string>
    <string name="landing_title">WELCOME</string>
    <string name="select_quiz_title">SELECT QUIZ</string>
    <string name="quiz_title">QUIZ:</string>


    <!-- LABEL STRINGS -->
    <string name="username_label">USERNAME:</string>
    <string name="password_label">PASSWORD:</string>
    <string name="display_name_label">DISPLAY NAME:</string>
    <string name="email_label">E-MAIL:</string>
    <string name="phone_label">PHONE:</string>
    <string name="question_number_label">QUESTION #:</string>
    <string name="blank_question_label">Place Question Here</string>
    <string name="blank_answer_label">Place Answer Here</string>
    <string name="blank_image_label">No Image</string>
    <string name="selected_answer_label">SELECTED ANSWER:</string>
    <string name="selected_answer_default">None</string>


    <!-- MESSAGES STRINGS -->
    <string name="password_requirements_text">Password must be a minimum of 14 characters</string>


    <!-- HINT STRINGS -->
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="display_name_hint">Enter Display Name</string>
    <string name="email_hint">Enter E-Mail</string>
    <string name="phone_hint">Enter Phone</string>


    <!-- BUTTON STRINGS -->
    <string name="create_account_button">Create New Account</string>
    <string name="login_button">Login</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="take_quiz_button">Take Quiz</string>
    <string name="add_course_button">Add Course</string>
    <string name="messages_button">Messages</string>
    <string name="get_student_report_button">Get Student Report</string>
    <string name="manage_account_button">Manage Account</string>
    <string name="logout_button">Logout</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="submit_quiz_button">Submit Quiz</string>
    <string name="answer_a_button">A</string>
    <string name="answer_b_button">B</string>
    <string name="answer_c_button">C</string>
    <string name="answer_d_button">D</string>


    <string name="test_button">TEST201 (Test Course)</string>

    <!-- SHARED PREFERENCE STRINGS -->


    <!-- STRING ARRAYS -->


</resources>
