<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_presenter.create_account.CreateAccount">

    <TextView
        android:id="@+id/createaccountTitle"
        android:text="@string/create_account_title"
        android:textSize="@dimen/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/createaccountUsernameLabel"
        android:text="@string/username_label"
        android:textSize="@dimen/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccountTitle" />

    <EditText
        android:id="@+id/createaccountUsernameEdit"
        android:hint="@string/username_hint"
        tools:ignore="Autofill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/createaccountUsernameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createaccountDisplayNameLabel"
        />

    <TextView
        android:id="@+id/createaccountPasswordLabel"
        android:text="@string/password_label"
        android:textSize="@dimen/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccountUsernameLabel"
        />

    <EditText
        android:id="@+id/createaccountPasswordEdit"
        android:hint="@string/password_hint"
        tools:ignore="Autofill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/createaccountPasswordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createaccountDisplayNameLabel"
        />

    <TextView
        android:id="@+id/createaccountPasswordRequirementsText"
        android:text="@string/password_requirements_text"
        android:textSize="@dimen/small_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccountPasswordLabel"
        />

    <TextView
        android:id="@+id/createaccountDisplayNameLabel"
        android:text="@string/display_name_label"
        android:textSize="@dimen/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccountPasswordRequirementsText"
        />

    <EditText
        android:id="@+id/createaccountDisplayNameEdit"
        tools:ignore="Autofill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:ems="10"
        android:hint="@string/display_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/createaccountDisplayNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createaccountDisplayNameLabel"
        />

    <TextView
        android:id="@+id/createaccountEmailLabel"
        android:text="@string/email_label"
        android:textSize="@dimen/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccountDisplayNameLabel"
        />

    <EditText
        android:id="@+id/createaccountEmailEdit"
        android:hint="@string/email_hint"
        tools:ignore="Autofill"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/createaccountEmailLabel"
        app:layout_constraintStart_toEndOf="@+id/createaccountDisplayNameLabel"
        />

    <Button
        android:id="@+id/createaccountConfirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:text="@string/confirm_button"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/createaccountCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/createaccountCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:text="@string/cancel_button"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ProgressBar
        android:id="@+id/createaccountIndeterminateProgress"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</android.support.constraint.ConstraintLayout>