<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_presenter.login.Login">

    <TextView
        android:id="@+id/loginTitle"
        android:text="@string/login_title"
        android:textSize="@dimen/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/loginUsernameLabel"
        android:text="@string/username_label"
        android:textSize="@dimen/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginStart="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/loginUsernameEdit"
        android:hint="@string/username_hint"
        tools:ignore="Autofill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/loginUsernameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginUsernameLabel"
        />

    <TextView
        android:id="@+id/loginPasswordLabel"
        android:text="@string/password_label"
        android:textSize="@dimen/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:layout_marginStart="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUsernameLabel"
        />

    <EditText
        android:id="@+id/loginPasswordEdit"
        android:hint="@string/password_hint"
        tools:ignore="Autofill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/loginPasswordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginUsernameLabel"
        />

    <Button
        android:id="@+id/loginLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:text="@string/login_button"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/loginCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/loginCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extra_large_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:text="@string/cancel_button"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</android.support.constraint.ConstraintLayout>