<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_presenter.landing.Landing">

    <TextView
        android:id="@+id/landingTitle"
        android:text="@string/landing_title"
        android:textSize="@dimen/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/landingTakeQuizButton"
        android:text="@string/take_quiz_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@+id/landingTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/landingManageAccountButton"
        android:text="@string/manage_account_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@+id/landingTakeQuizButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/landingMessagesButton"
        android:text="@string/messages_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@+id/landingManageAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/landingGetStudentReportButton"
        android:text="@string/get_student_report_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:textSize="@dimen/button_text"
        app:layout_constraintTop_toBottomOf="@+id/landingMessagesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/landingLogoutButton"
        android:text="@string/logout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extra_large_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</android.support.constraint.ConstraintLayout>