<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_presenter.quiz.MCQuizQuestionFragment"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/quizfragmentQuestionNumber"
            android:text="@string/question_number_label"
            android:textSize="@dimen/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/quizfragmentQuestion"
            android:text="@string/blank_question_label"
            android:textSize="@dimen/button_text"
            android:textAlignment="textStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentQuestionNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/quizfragmentQuestionImage"
            android:contentDescription="@string/blank_image_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            app:layout_constraintTop_toBottomOf="@id/quizfragmentQuestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/quizfragmentAnswer1Button"
            android:text="@string/answer_a_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentQuestionImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quizfragmentAnswer1Label"
            />

        <TextView
            android:id="@+id/quizfragmentAnswer1Label"
            android:text="@string/blank_answer_label"
            android:textSize="@dimen/button_text"
            android:textAlignment="textStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentQuestionImage"
            app:layout_constraintStart_toEndOf="@id/quizfragmentAnswer1Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/quizfragmentAnswer1Button"
            />

        <Button
            android:id="@+id/quizfragmentAnswer2Button"
            android:text="@string/answer_b_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentAnswer1Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quizfragmentAnswer2Label"
            />

        <TextView
            android:id="@+id/quizfragmentAnswer2Label"
            android:text="@string/blank_answer_label"
            android:textSize="@dimen/button_text"
            android:textAlignment="textStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentAnswer1Button"
            app:layout_constraintStart_toEndOf="@id/quizfragmentAnswer2Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/quizfragmentAnswer2Button"
            />

        <Button
            android:id="@+id/quizfragmentAnswer3Button"
            android:text="@string/answer_c_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentAnswer2Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quizfragmentAnswer3Label"
            />

        <TextView
            android:id="@+id/quizfragmentAnswer3Label"
            android:text="@string/blank_answer_label"
            android:textSize="@dimen/button_text"
            android:textAlignment="textStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentAnswer2Button"
            app:layout_constraintStart_toEndOf="@id/quizfragmentAnswer3Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/quizfragmentAnswer3Button"
            />

        <Button
            android:id="@+id/quizfragmentAnswer4Button"
            android:text="@string/answer_d_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:textSize="@dimen/button_text"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentAnswer3Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quizfragmentAnswer4Label"
            />

        <TextView
            android:id="@+id/quizfragmentAnswer4Label"
            android:text="@string/blank_answer_label"
            android:textSize="@dimen/button_text"
            android:textAlignment="textStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentAnswer3Button"
            app:layout_constraintStart_toEndOf="@id/quizfragmentAnswer4Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/quizfragmentAnswer4Button"
            />

        <TextView
            android:id="@+id/quizfragmentSelectedAnswerLabel"
            android:text="@string/selected_answer_label"
            android:textSize="@dimen/button_text"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentAnswer4Button"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/quizfragmentSelectedAnswerDisplay"
            android:text="@string/selected_answer_default"
            android:textSize="@dimen/button_text"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            app:layout_constraintTop_toBottomOf="@+id/quizfragmentAnswer4Button"
            app:layout_constraintStart_toEndOf="@+id/quizfragmentSelectedAnswerLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/quizfragmentSelectedAnswerLabel"
            />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
